Added Ability to Delete and Complete

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
   .image {
     width: 40px;
   }
+  .date {
+    color:rgba(103, 115, 128, 0.589);
+    font-size: 15px;
+
+  }
   .subheading {
     color: rgba(103, 115, 128, 0.589);
     padding-left: 50px;
     padding-right: 50px;
-    padding-top: 30px;
-    padding-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 30px;
   }
   .mainLayout {
     padding-left: 50px;
