Added Due Date (In Development)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   .image {
     width: 40px;
   }
+  .item{
+    font-style: bold;
+  }
+  
   .date {
     color:rgba(103, 115, 128, 0.589);
     font-size: 15px;
