--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   .image {
     width: 40px;
   }
+
+  .item {
+    background-color: white;
+    border: 2px solid white;
+    font-size: 10px;
+    color: red;
+    align-content: flex-end;
+  }
   .dueDate{
     font-size: 15px;
   }
