Got rid of unused domponents

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 
 <div class="mainLayout outer" id="app" >
   <to-do-app/>
+
+  <list-items name="Foo"/>
 </div>
 <h6 class="subheading">Created by Cole Hagen</h6>
 
