--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
     width: 40px;
   }
 
-  .item {
-    background-color: white;
-    border: 2px solid white;
-    font-size: 10px;
-    color: red;
+  .itemName {
+    font-size: 20px;
+    color: black;
     align-content: flex-end;
+    font-weight: bold;
+  }
+  .item {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    }
+  .completed {
+    text-decoration: line-through;
   }
   .dueDate{
     font-size: 15px;
@@ -67,7 +75,6 @@
 <div class="mainLayout outer" id="app" >
   <to-do-app/>
 
-  <list-items name="Foo"/>
 </div>
 <h6 class="subheading">Created by Cole Hagen</h6>
 
