--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <script src="https://unpkg.com/lodash@4.16.0"></script>
 
 <style>
+  .highlight{
+    background-color: lightgrey;
+  }
+  .title {
+    border-bottom: black;
+  }
   .image {
     width: 40px;
   }
@@ -27,7 +33,7 @@
   }
 
   .item {
-    padding-left: 10px;
+    
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
